--- a/v1/style-main.css
+++ b/v1/style-main.css
@@ -8,6 +8,15 @@ html, body {
     /* overflow-y: auto; */
 }
 
+.container {
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    max-width: 1060px;
+    padding: 0;
+    max-width: 1260px;
+}
+
 input {
     outline: none;
     text-transform: uppercase;
@@ -158,12 +167,18 @@ header {
     margin: 5%;
 }
 
+#ifInp {
+    color: rgb(0, 0, 0);
+    background-color: rgba(98, 111, 117, 0);
+}
+
 #ifHead {
     position: relative;
     left: 40%;
     bottom: 65%;
     font-size: 165%;
     margin-top: 5%;
+    width: 60%;
 }
 
 #ifFoot {
@@ -172,28 +187,25 @@ header {
     margin-top: 3%;
 }
 
-#ifInp {
-    position: absolute;
-    color: rgb(0, 0, 0);
-    width: 35%;
-    top: 100%;
-    margin-top: 10%;
-    height: 40%;
-    background-color: rgba(98, 111, 117, 0);
-    /* border: 0 solid black; */
-    /* border-bottom: 1px solid black; */
+#inpHelp {
+    position: relative;
+    width: 40%;
+    left: 50%;
+    bottom: 40%;
+    height: 30%;
+    /* background-color: rgba(207, 22, 22, 0.425); */
 }
 
 #check {
-    position: absolute;
+    position: relative;
     background-color: black;
     color: white;
     border-radius: 50px;
-    width: 17%;
-    left: 38%;
+    width: 35%;
+    left: 10%;
     top: 95%;
     margin-top: 10%;
-    height: 50%;
+    height: 35px;
     transition: linear .4s;
 }
 
@@ -240,22 +252,24 @@ header {
 #costImg {
     position: relative;
     height: 50%;
-    left: 15%;
-    margin-top: 7%;
+    width: 30%;
+    left: 9%;
+    /* top: 5%; */
+    margin-top: 5%;
 }
 
 #costMain {
     position: relative;
-    left: 50%;
-    width: 35%;
-    bottom: 50%;
+    left: 55%;
+    width: 45%;
+    bottom: 45%;
 }
 
 #inpHelp {
     position: relative;
     width: 40%;
     left: 50%;
-    bottom: 40%;
+    /* bottom: 40%; */
     height: 30%;
     /* background-color: rgba(207, 22, 22, 0.425); */
 }
